@@ -84,7 +84,7 @@ wxDialog(parent, -1, _("Category"),
 	} else {
 		// Default values for new categories
 		CastChild(IDC_TITLE,	wxTextCtrl)->SetValue(_("New Category"));
-		CastChild(IDC_INCOMING,	wxTextCtrl)->SetValue(thePrefs::GetIncomingDir());
+		CastChild(IDC_INCOMING,	wxTextCtrl)->SetValue(thePrefs::GetIncomingDir().GetRaw());
 		CastChild(IDC_COMMENT,	wxTextCtrl)->SetValue(wxEmptyString);
 		CastChild(IDC_PRIOCOMBO,wxChoice)->SetSelection(0);
 		
